version updated, javadoc generated